operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoplifting-detector-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoplifting-detector-operator
  template:
    metadata:
      labels:
        app: shoplifting-detector-operator
    spec:
      serviceAccountName: shoplifting-detector-operator
      containers:
      - name: operator
        image: ziedgormzi/controller:latest
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
